# ai-translate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
ai_translate/: __init__.py  config.py
ai_translate/cli/: main.py  ui.py
ai_translate/services/: cache.py  env_manager.py
ai_translate/services/translators/: __init__.py  base.py  claude.py  gemini.py  mistral.py  openai_provider.py  openrouter.py
tests/: conftest.py  test_business_logic.py  test_cache.py  test_cli.py  test_platforms.py  test_plurals.py  test_translators.py
